# qt5-openglunderqml

./: CMakeLists.txt  main.cpp  main.qml  squircle.cpp  squircle.h
